ZFIN-8275:
Use java streams map in place of loop.